<resources>
    <string name="app_name">Urządzenia sieciowe</string>
    <string name="no_data">Brak danych</string>
    <string name="new_device">Nowe urządzenie</string>
    <string name="device">Urządzenie</string>
    <string name="note">Notatka</string>
    <string name="device_name">Nazwa urządzenia</string>
    <string name="photo">Zdjęcie</string>
    <string name="add_picture">Dodaj/zmień obraz</string>
    <string name="del_photo">Usuń obraz</string>
    <string name="choose_color">Kolor tła listy</string>
    <string name="info_and_help">Informacje i pomoc</string>
    <string name="details">Informacje szczegółowe</string>
    <string name="add_details">Dodaj informacje szczegółowe</string>
    <string name="date">Data ostatniego przeglądu technicznego:</string>
    <string name="location">Lokalizacja:</string>
    <string name="edit_date">Edytuj datę</string>
    <string name="edit_location">Edytuj lokalizację</string>
    <string name="day">Dzień</string>
    <string name="month">Miesiąc</string>
    <string name="year">Rok</string>
    <string name="hour">Godzina</string>
    <string name="min">Minuty</string>
    <string name="weather">Pogoda</string>
    <string name="wind">\u0020Wiatr</string>
    <string name="credentials">Poświadczenia:</string>
</resources>